# core-ocr

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  build_template.py  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: build-and-draft-release.yml
assets/: devices.json
src/arcaea_offline_ocr/: __init__.py  _builtin_templates.py  crop.py  device.py  mask.py  ocr.py  ocr_new.py  phash_db.py  recognize.py  sift_db.py  template.py  types.py  utils.py
src/arcaea_offline_ocr/b30/: shared.py
src/arcaea_offline_ocr/b30/chieri/v4/: colors.py  ocr.py  rois.py
src/arcaea_offline_ocr/device/: __init__.py  common.py  ocr.py  shared.py
src/arcaea_offline_ocr/device/roi/definitions/: common.py
src/arcaea_offline_ocr/device/roi/definitions/auto/: __init__.py  common.py  t2.py
src/arcaea_offline_ocr/device/roi/extractor/: __init__.py  common.py
src/arcaea_offline_ocr/device/roi/masker/: common.py
src/arcaea_offline_ocr/device/roi/masker/auto/: t1.py
src/arcaea_offline_ocr/device/rois/: __init__.py
src/arcaea_offline_ocr/device/rois/definition/: __init__.py  auto.py  common.py
src/arcaea_offline_ocr/device/rois/extractor/: __init__.py  common.py
src/arcaea_offline_ocr/device/rois/masker/: __init__.py  auto.py  common.py
src/arcaea_offline_ocr/device/v1/: crop.py  definition.py  ocr.py
src/arcaea_offline_ocr/device/v2/: __init__.py  definition.py  find.py  ocr.py  preprocess.py  rois.py  shared.py  sizes.py
src/arcaea_offline_ocr/extractor/: __init__.py  common.py
src/arcaea_offline_ocr/extractor/sizes/: common.py
src/arcaea_offline_ocr/extractor/sizes/auto/: __init__.py  common.py  t2.py
src/arcaea_offline_ocr/masker/: __init__.py  common.py
src/arcaea_offline_ocr/masker/auto/: __init__.py  common.py  t1.py  t2.py
src/arcaea_offline_ocr/roi_extractor/: __init__.py  common.py
src/arcaea_offline_ocr/roi_extractor/sizes/auto/: t1.py
