[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arcaea-offline-ocr"
version = "0.0.98"
authors = [{ name = "283375", email = "log_283375@163.com" }]
description = "Extract your Arcaea play result from screenshot."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["attrs==23.1.0", "numpy==1.26.1", "opencv-python==4.8.1.78"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/ArcaeaOffline/core-ocr"
"Bug Tracker" = "https://github.com/ArcaeaOffline/core-ocr/issues"

[tool.isort]
profile = "black"
src_paths = ["src/arcaea_offline_ocr"]

[tool.pyright]
ignore = ["**/__debug*.*"]

[tool.pylint.main]
# extension-pkg-allow-list = ["cv2"]
generated-members = ["cv2.*"]

[tool.pylint.logging]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring"
]
